--- a/.github/workflows/Mamba-Pytest.yaml
+++ b/.github/workflows/Mamba-Pytest.yaml
@@ -23,13 +23,13 @@ jobs:
         environment-name: mamba_pytest_${{ github.sha }}
         create-args: python=3.11
         post-cleanup: 'all'
-    - name: Lint with flake8
-      run: |
-        mamba install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+#    - name: Lint with flake8
+#      run: |
+#        mamba install flake8
+#        # stop the build if there are Python syntax errors or undefined names
+#        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+#        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+#        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
         pip install pytest
