--- a/.github/workflows/Mamba-Pytest.yaml
+++ b/.github/workflows/Mamba-Pytest.yaml
@@ -6,10 +6,6 @@ on:
     types: [labeled, opened]
   merge_group:
   workflow_dispatch:
-  
-defaults:
-  run:
-    shell: bash -leo pipefail {0}
 
 jobs:
   build-linux:
@@ -26,7 +22,6 @@ jobs:
         environment-name: mamba_pytest_${{ github.sha }}
         create-args: python=3.11
         post-cleanup: 'all'
-        init-shell: bash
 #    - name: Lint with flake8
 #      run: |
 #        mamba install flake8
@@ -35,8 +30,7 @@ jobs:
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Check In Mamba
-      run: mamba env
-      shell: bash -le {0}
+      run: echo $MAMBA_EXE
     - name: Install Pytest
       run: pip install pytest
     - name: Run Pytest Tests
