--- a/.github/workflows/Mamba-Pytest.yaml
+++ b/.github/workflows/Mamba-Pytest.yaml
@@ -30,7 +30,7 @@ jobs:
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Check In Mamba
-      run: echo $MAMBA_EXE
+      run: $MAMBA_EXE env
     - name: Install Pytest
       run: pip install pytest
     - name: Run Pytest Tests
