--- a/.github/workflows/Micromamba-Pytest.yaml
+++ b/.github/workflows/Micromamba-Pytest.yaml
@@ -29,8 +29,14 @@ jobs:
 #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Check In Mamba
-      run: micromamba list
+    - name: Install CUDA
+      run: micromamba install cuda -c nvidia
+    - name: Install Ninja
+      run: micromamba install ninja
+    - name: Install Python Requirements
+      run: pip install -r requirements.txt
+    - name: Install Flash Attention
+      run: pip install flash-attn==2.5.6 --no-build-isolation
     - name: Install Pytest
       run: pip install pytest
     - name: Run Pytest Tests
