--- a/.github/workflows/Micromamba-Pytest.yaml
+++ b/.github/workflows/Micromamba-Pytest.yaml
@@ -30,14 +30,20 @@ jobs:
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Install CUDA
-      run: micromamba install cuda -c nvidia
+      run: micromamba install cuda -c nvidia -y
+      shell: micromamba run -n micromamba_pytest_${{ github.sha }} --live-stream {0}
     - name: Install Ninja
       run: micromamba install ninja
+      shell: micromamba run -n micromamba_pytest_${{ github.sha }} --live-stream {0}
     - name: Install Python Requirements
       run: pip install -r requirements.txt
+      shell: micromamba run -n micromamba_pytest_${{ github.sha }} --live-stream {0}
     - name: Install Flash Attention
       run: pip install flash-attn==2.5.6 --no-build-isolation
+      shell: micromamba run -n micromamba_pytest_${{ github.sha }} --live-stream {0}
     - name: Install Pytest
       run: pip install pytest
+      shell: micromamba run -n micromamba_pytest_${{ github.sha }} --live-stream {0}
     - name: Run Pytest Tests
       run: pytest
+      shell: micromamba run -n micromamba_pytest_${{ github.sha }} --live-stream {0}
