--- a/.github/workflows/Micromamba-Pytest.yaml
+++ b/.github/workflows/Micromamba-Pytest.yaml
@@ -29,11 +29,14 @@ jobs:
 #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
 #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
 #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Install CUDA
-      run: $MAMBA_EXE install cuda -c nvidia -y
+    - name: Hello
+      run: echo "hello"
       shell: micromamba run -n micromamba_pytest_env {0}
     - name: Install Ninja
       run: $MAMBA_EXE install ninja
+      shell: micromamba run -n micromamba_pytest_env {0}
+    - name: Install CUDA
+      run: $MAMBA_EXE install cuda -c nvidia -y
       shell: micromamba run -n micromamba_pytest_env {0}
     - name: Install Python Requirements
       run: pip install -r requirements.txt
