--- a/.github/workflows/Micromamba-Pytest.yaml
+++ b/.github/workflows/Micromamba-Pytest.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-linux:
-    runs-on: [self-hosted, ubuntu-latest]
+    runs-on: [self-hosted, linux]
     strategy:
       max-parallel: 5
 
